make RoutingWidget resizable within the QScrollArea

* fixes routing dialog getting unreadable with many way points

BUG: 322785